# Unitree-B1

./: README.md  hi
00_Origin_code/00_ws_miniPC(onboard)/: install.sh
00_Origin_code/00_ws_miniPC(onboard)/autostart/: update.sh
00_Origin_code/00_ws_miniPC(onboard)/autostart/sportMode/: log
00_Origin_code/00_ws_miniPC(onboard)/autostart/sportMode/path_files/: pos_w_node.yaml
00_Origin_code/00_ws_miniPC(onboard)/sdk/unitree_legged_sdk_B1/example/: example_joystick_ex1.cpp  example_walk.cpp
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_base/launch/: base.launch
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_base/src/: base.cpp
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_bringup/: package.xml
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_gazebo/: CMakeLists.txt
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_gazebo/include/: gait_config.h
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_gazebo/launch/: bringup.launch  gazebo.launch
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_legged_msgs/: CMakeLists.txt
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_navigation/: package.xml
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_navigation/launch/: amcl_demo.launch
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_navigation/launch/include/: amcl.launch.xml  move_base.launch.xml
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_teleop/: README.md  b1_teleop.py
00_Origin_code/01_ws_qre_b1(germany)/b1/b1_viz/launch/: view_robot.launch
5week_summer_project_2024/robot_operating/src/: README.md
5week_summer_project_2024/robot_operating/src/b1/b1_base/: CMakeLists.txt
5week_summer_project_2024/robot_operating/src/b1/b1_bringup/: CMakeLists.txt
5week_summer_project_2024/robot_path_following/src/robot_controller/: CMakeLists.txt  final_path_ver3.csv  final_path_ver3_preprocess.csv  final_path_ver5_preprocess.csv  final_path_ver6.csv  final_path_ver6_preprocess.csv  package.xml
5week_summer_project_2024/robot_path_following/src/robot_controller/src/: robot_controller.cpp
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_description/: package.xml
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_description/meshes/: calf.dae
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_description/xacro/: b1.urdf
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_gazebo/: config.json
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_legged_msgs/: CMakeLists.txt  package.xml
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_navigation/: CMakeLists.txt
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_viz/: CMakeLists.txt  package.xml
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_viz/launch/: view_model.launch
High_level_control/ws_qre_b1_body_foot_cmd_ver1/src/b1/b1_viz/rviz/: robot.rviz
Unitree/sdk/unitree_legged_sdk_B1/example/: example.walk.cpp  example_joystick.cpp  example_position.cpp  example_position1  example_position_ver1.cpp  example_recover_stand.cpp  example_torque.cpp  example_velocity.cpp  example_velocity_ver1  example_walk.cpp  example_walk1  example_walk2.cpp  example_walk_ver1.cpp
Unitree/sdk/unitree_legged_sdk_B1/include/: b1_const.h  comm.h  joystick.h  loop.h  quadruped.h  safety.h  udp.h  unitree_legged_sdk.h
ws_b1_develop/High_level_control/: README.md
ws_b1_develop/High_level_control/b1_HLC_ver1/b1_base/: package.xml
ws_b1_develop/High_level_control/b1_HLC_ver1/b1_base/src/: base.cpp
ws_b1_develop/High_level_control/b1_HLC_ver1/b1_bringup/scripts/: startup_job.py
ws_b1_develop/High_level_control/b1_HLC_ver1/b1_control/: CMakeLists.txt  package.xml
ws_b1_develop/High_level_control/b1_HLC_ver1/b1_description/meshes/: thigh.dae  thigh_mirror.dae
ws_b1_develop/High_level_control/b1_HLC_ver1/b1_legged_msgs/srv/: SetMode.srv
ws_b1_develop/High_level_control/b1_HLC_ver1/b1_teleop/: CMakeLists.txt  b1_teleop.py  package.xml
ws_b1_develop/High_level_control/b1_HLC_ver2/b1_base/src/: base.cpp  base_node.cpp
ws_b1_develop/High_level_control/b1_HLC_ver2/b1_bringup/launch/: bringup.launch
ws_b1_develop/High_level_control/b1_HLC_ver2/b1_description/launch/: b1_rviz.launch
ws_b1_develop/High_level_control/b1_HLC_ver2/b1_teleop/launch/: teleop.launch
ws_b1_develop/Low_level_control/: README.md
ws_b1_develop/Low_level_control/b1_LLC_ver1/b1_base/: CMakeLists.txt
ws_b1_develop/Low_level_control/b1_LLC_ver1/b1_bringup/launch/: bringup.launch
ws_b1_develop/Low_level_control/b1_LLC_ver1/b1_description/meshes/: hip.dae
ws_b1_develop/Low_level_control/b1_LLC_ver1/b1_description/xacro/: gazebo.xacro
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_base/: CMakeLists.txt
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_base/include/b1_base/: base_position.hpp
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_base/launch/: base_position.launch
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_base/src/: base_node.cpp  base_position.cpp
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_base/src/legacy_wrapper/: robot.cpp
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_bringup/launch/: bringup.launch
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_control/config/: teleop_logitech.yaml
ws_b1_develop/Low_level_control/b1_LLC_ver2/b1_control/launch/: interactive_marker.launch.xml  teleop.launch
ws_qre_b1/src/b1/b1_base/: CMakeList.txt  base.launch  package.xml
ws_qre_b1/src/b1/b1_base/include/: loop.h
ws_qre_b1/src/b1/b1_base/include/b1_base/: base.hpp  base_ver1.hpp
ws_qre_b1/src/b1/b1_base/include/b1_base/legacy_wrapper/: quadruped.hpp  robot.hpp
ws_qre_b1/src/b1/b1_base/include/unitree_legged_sdk/: b1_const.h  comm.h  joystick.h  quadruped.h  udp.h
ws_qre_b1/src/b1/b1_base/src/: base.cpp  base_node.cpp  base_ver1.cpp
ws_qre_b1/src/b1/b1_bringup/: CMakeLists.txt
ws_qre_b1/src/b1/b1_bringup/config/: setup.bash
ws_qre_b1/src/b1/b1_teleop/: b1_teleop.py  b1_teleop_ver1.py
ws_qre_b1_upgrade/version1/: README.md
ws_qre_b1_upgrade/version1/b1/b1_base/: CMakeLists.txt
ws_qre_b1_upgrade/version1/b1/b1_legged_msgs/: CMakeLists.txt
ws_qre_b1_upgrade/version1/b1/b1_teleop/: b1_teleop.py
(+35 files in other folders)
