<?xml version="1.0"?>
<package>
  <name>b1_navigation</name>
  <version>0.7.0</version>
  <description>Autonomous mapping and navigation demos for the B1</description>
  <author email="support@mybotshop.de">Salman Omar Sohail</author>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Proprietary</license>
  <url type="website">https://mybotshop.de</url>
  <url type="repository">https://mybotshop.de</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>amcl</run_depend>
  <run_depend>gmapping</run_depend>
  <run_depend>map_server</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>navfn</run_depend>
  <run_depend>base_local_planner</run_depend>
  <run_depend>dwa_local_planner</run_depend>

  <export>
  </export>
</package>
