<?xml version="1.0"?>
<package>
  <name>b1_control</name>
  <version>0.5.0</version>
  <description>B1 configurations</description>
  <author email="support@mybotshop.de">Salman Omar Sohail</author>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Proprietary</license>
  <url type="website">https://mybotshop.de</url>
  <url type="repository">https://mybotshop.de</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>b1_description</run_depend>
  <run_depend>interactive_marker_twist_server</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>robot_localization</run_depend>
  <run_depend>rostopic</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>teleop_twist_joy</run_depend>
  <run_depend>twist_mux</run_depend>
</package>