<package format="2">
<name>b1_base</name>
<version>1.0.0</version>
<description>The b1_base package</description>
<author email="tahir.mehmood@mybotshop.de">Tahir Mehmood</author>
<maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
<license>Proprietary</license>
<url type="website">https://mybotshop.de</url>
<url type="repository">https://mybotshop.de</url>
<buildtool_depend>catkin</buildtool_depend>
<depend>b1_legged_msgs</depend>
<depend>kdl_parser</depend>
<depend>urdf</depend>
<build_depend>roscpp</build_depend>
<build_depend>rospy</build_depend>
<build_depend>std_msgs</build_depend>
<build_depend>cmake_modules</build_depend>
<build_export_depend>roscpp</build_export_depend>
<build_export_depend>rospy</build_export_depend>
<build_export_depend>std_msgs</build_export_depend>
<exec_depend>roscpp</exec_depend>
<exec_depend>rospy</exec_depend>
<exec_depend>std_msgs</exec_depend>
</package>
