<?xml version="1.0"?>
<package format="2">
    <name>b1_description</name>
    <version>1.2.0</version>
    <description>The b1_description package</description>
    <author email="support@mybotshop.de">Salman Omar Sohail</author>
    <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
    <license>Proprietary</license>
    <url type="website">https://mybotshop.de</url>
    <url type="repository">https://mybotshop.de</url>
    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>
