<?xml version="1.0"?>
<package format="2">
  <name>b1_legged_msgs</name>
  <version>0.2.0</version>
  <description>
    B1 legged messages package
  </description>
  <author email="tahir.mehmood@mybotshop.de">Tahir Mehmood</author>
  <maintainer email="support@mybotshop.de">Salman Omar Sohail</maintainer>
  <license>Proprietary</license>
  <url type="website">https://mybotshop.de</url>
  <url type="repository">https://mybotshop.de</url>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_runtime</depend>
  <depend>message_generation</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
</package>